[package]

name = "elan"
version = "0.8.1-pre"
authors = [ "Sebastian Ullrich <sebasti@nullri.ch>" ]
description = "Manage multiple Lean installations with ease"
publish = false

license = "MIT OR Apache-2.0"

build = "build.rs"

[features]

default = ["curl-backend"]

curl-backend = ["download/curl-backend"]
reqwest-backend = ["download/reqwest-backend"]

# Include in the default set to disable self-update and uninstall.
no-self-update = []

# Used to change behavior of self-update and uninstall if installed via MSI
msi-installed = []

[dependencies]
elan-dist = { path = "src/elan-dist" }
elan-utils = { path = "src/elan-utils" }
download = { path = "src/download" }
clap = "2.18.0"
error-chain = "0.11"
itertools = "0.7.6"
libc = "0.2.0"
markdown = "0.2"
rand = "0.4.2"
regex = "0.2"
remove_dir_all = "0.3.0"
same-file = "1.0"
scopeguard = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
tempdir = "0.3.4"
tempfile = "2.1.4"
term = "0.4.4"
time = "0.1.34"
toml = "0.4"
url = "1.1.0"
wait-timeout = "0.1.5"
zip = "0.3"
tar = "0.4.0"
flate2 = "1.0.1"
json = "0.11.13"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["jobapi", "jobapi2", "processthreadsapi", "psapi", "synchapi", "winuser"] }
winreg = "0.5.0"
gcc = "0.3.50"

[lib]
name = "elan"
path = "src/elan/lib.rs"
test = false # no unit tests

[[bin]]
name = "elan-init"
path = "src/elan-cli/main.rs"
test = false # no unit tests
