[package]

name = "elan"
version = "2.0.1"
authors = [ "Sebastian Ullrich <sebasti@nullri.ch>" ]
description = "Manage multiple Lean installations with ease"
publish = false

license = "MIT OR Apache-2.0"

build = "build.rs"

[features]

default = ["curl-backend"]

curl-backend = ["download/curl-backend"]
reqwest-backend = ["download/reqwest-backend"]

# Include in the default set to disable self-update and uninstall.
no-self-update = []

# Used to change behavior of self-update and uninstall if installed via MSI
msi-installed = []

[dependencies]
elan-dist = { path = "src/elan-dist" }
elan-utils = { path = "src/elan-utils" }
download = { path = "src/download" }
clap = "2.33.3"
error-chain = "0.12.4"
itertools = "0.10.0"
libc = "0.2.82"
markdown = "0.3.0"
rand = "0.8.2"
regex = "1.4.3"
remove_dir_all = "0.8.0"
same-file = "1.0.6"
scopeguard = "1.1.0"
serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0.61"
sha2 = "0.9.2"
tempfile = "3.2.0"
term = "0.7.0"
time = "0.3.4"
toml = "0.5.8"
url = "2.2.0"
wait-timeout = "0.2.0"
zip = "0.6"
tar = ">=0.4.36"
flate2 = "1.0.14"
json = "0.12.4"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["jobapi", "jobapi2", "processthreadsapi", "psapi", "synchapi", "winuser"] }
winreg = "0.8.0"
gcc = "0.3.55"

[workspace]
members = ["src/download", "src/elan-dist", "src/elan-utils"]

[lib]
name = "elan"
path = "src/elan/lib.rs"
test = false # no unit tests

[[bin]]
name = "elan-init"
path = "src/elan-cli/main.rs"
test = false # no unit tests
