[package]

name = "download"
version = "0.4.0"
authors = [ "Brian Anderson <banderson@mozilla.com>" ]
edition = "2021"

license = "MIT/Apache-2.0"

[features]

default = ["curl-backend"]

curl-backend = ["curl"]
reqwest-backend = ["reqwest", "env_proxy", "lazy_static"]

[dependencies]
error-chain = "0.12.4"
url = "2.2.1"
curl = { version = "0.4.34", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
env_proxy = { version = "0.4.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
reqwest = { version = "0.11.1", optional = true }

[dev-dependencies]
futures = "0.3.13"
hyper = "0.14.4"
