[package]

name = "elan-dist"
version = "1.11.0"
authors = [ "Sebastian Ullrich <sebasti@nullri.ch>" ]
description = "Installation from a Lean distribution server"
build = "build.rs"

license = "MIT OR Apache-2.0"

[dependencies]
regex = "0.2.0"
itertools = "0.7"
ole32-sys = "0.2.0"
url = "1.1.0"
tar = "0.4.0"
flate2 = "1.0.1"
walkdir = "2.0"
toml = "0.4"
sha2 = "0.7.0"
remove_dir_all = "0.3"
elan-utils = { path = "../elan-utils" }
error-chain = "0.11"
json = "0.11.13"
zip = "0.3"
filetime = "0.2.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["handleapi", "sysinfoapi", "tlhelp32", "winnt"] }
winreg = "0.5"

[target."cfg(not(windows))".dependencies]
libc = "0.2.0"

[lib]
name = "elan_dist"

