[package]

name = "elan-dist"
version = "1.11.0"
authors = [ "Sebastian Ullrich <sebasti@nullri.ch>" ]
description = "Installation from a Lean distribution server"
build = "build.rs"
edition = "2021"

license = "MIT OR Apache-2.0"

[dependencies]
regex = "1.4.3"
itertools = "0.10.0"
ole32-sys = "0.2.0"
url = "2.2.1"
tar = "0.4.33"
flate2 = "1.0.14"
zstd = "0.12"
walkdir = "2.3.1"
toml = "0.5.8"
sha2 = "0.9.3"
remove_dir_all = "0.8.0"
elan-utils = { path = "../elan-utils" }
error-chain = "0.12.4"
json = "0.12.4"
zip = "2.5.0"
filetime = "0.2.14"
time = "0.3"
serde = "1.0.119"
serde_derive = "1.0.119"
fslock = "0.2.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "sysinfoapi", "tlhelp32", "winnt"] }
winreg = "0.8.0"

[target."cfg(not(windows))".dependencies]
libc = "0.2.88"

[lib]
name = "elan_dist"
