[package]

name = "elan-utils"
version = "1.11.0"
authors = [ "Sebastian Ullrich <sebasti@nullri.ch>" ]
description = "Utility functions for elan"

license = "MIT OR Apache-2.0"

[dependencies]
download = { path = "../download" }
error-chain = "0.11"
libc = "0.2.0"
rand = "0.4.2"
remove_dir_all = "0.3.0"
scopeguard = "0.3.0"
semver = "0.9.0"
sha2 = "0.7.0"
toml = "0.4"
url = "1.1"
curl = "0.4.6"
regex = "0.2.0"
dirs = "1.0.3"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["combaseapi", "errhandlingapi", "fileapi", "handleapi", 
    "ioapiset", "minwindef", "processthreadsapi", "shlobj", "shtypes", "userenv", "winbase", "winerror", "winnt", "winioctl"] }
winreg = "0.5.0"
