[package]

name = "elan-utils"
version = "1.11.0"
authors = [ "Sebastian Ullrich <sebasti@nullri.ch>" ]
description = "Utility functions for elan"

license = "MIT OR Apache-2.0"

[dependencies]
download = { path = "../download" }
error-chain = "0.12.4"
libc = "0.2.88"
rand = "0.8.3"
remove_dir_all = "0.8.0"
scopeguard = "1.1.0"
semver = "0.11.0"
sha2 = "0.9.3"
toml = "0.5.8"
url = "2.2.1"
curl = "0.4.34"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.4.3"
dirs = "3.0.1"
elan-cfg = { path = "../elan-cfg" }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["combaseapi", "errhandlingapi", "fileapi", "handleapi",
    "ioapiset", "minwindef", "processthreadsapi", "shlobj", "shtypes", "userenv", "winbase", "winerror", "winnt", "winioctl"] }
winreg = "0.8.0"
