[package]
name = "elan-win-installer"
version = "0.1.0"
authors = ["Sebastian Ullrich <sebasti@nullri.ch>"]
build = "build.rs"

[lib]
name = "elan_msi"
crate-type = ["cdylib"]

[features]
# Prevents confusion and reduces build time (`elan` will be built twice otherwise)
default = ["elan/msi-installed"]

[dependencies]
winapi = { version = "0.3", features = ["ntdef", "minwindef"] }
elan = { path = "../../", version = "1.1.0" }

[build-dependencies]
gcc = "0.3"
